# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Add REQUIRED_USE for toolkits.

  08 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Test for old bzr checkout.

  06 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Update to reflect changed variable name in eclass.

  06 Feb 2011; Ulrich Mueller <ulm@gentoo.org> -emacs-vcs-23.2.9999-r20.ebuild,
  -emacs-vcs-24.0.9999-r20.ebuild:
  Remove git based ebuilds again, because we have a working solution with bzr.
  The removed ebuilds can be found in revision 1595 of the emacs overlay.

  05 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999-r1.ebuild:
  Add a workaround for faster initial download; this clones the branch from a
  fast mirror (which may be out of date), and subsequently pulls from the slow
  original repository. The updated bzr.eclass is needed for this.

*emacs-vcs-24.0.9999-r1 (05 Feb 2011)
*emacs-vcs-23.2.9999-r1 (05 Feb 2011)

  05 Feb 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-23.2.9999-r1.ebuild,
  emacs-vcs-23.2.9999-r20.ebuild, +emacs-vcs-24.0.9999-r1.ebuild,
  emacs-vcs-24.0.9999-r20.ebuild:
  Add ebuilds for updated bzr.eclass.

  02 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999-r20.ebuild:
  Emacs uses automake now.

*emacs-vcs-23.2.9999-r20 (31 Jan 2011)

  31 Jan 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-23.2.9999-r20.ebuild:
  Add live git ebuild for emacs-23 branch.

  31 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999-r20.ebuild:
  Fix version detection, bug 353324. Set git project name to emacs.

*emacs-vcs-24.0.9999-r20 (30 Jan 2011)

  30 Jan 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.9999-r20.ebuild,
  +metadata.xml: