@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD emacs-vcs-23.2.9999-r1.ebuild 10118 RMD160 09d05ff0519426f1269b16129676771b9a03d1fd SHA1 98e726390bdf50e19950e7d95f519569d4f5bf09 SHA256 8817429ef45055b44cfa6f6ceb19a2fcf8977b1d2c093da6b5cbcd491a62b985
-EBUILD emacs-vcs-24.0.9999-r1.ebuild 10377 RMD160 060212d2fc63d127fdf0707f6f7e0ae346a1437e SHA1 4d909536db07ace1d300b4144215142cbb5ed576 SHA256 5681bdbd02bfa063cfadd9fba3da44c915e3acdbd2aa03029dd72ae08c88bb12
-MISC ChangeLog 2056 RMD160 cbe71b6d04f9835801c6f5b64f340ebe04216632 SHA1 db47d85412d474e66d305629ded0bbdda0ba76aa SHA256 8afeb8d6f9da4aa22a58b7f02d1a67473bae8c3e405d1fa585e2d07f658fe1a9
+EBUILD emacs-vcs-23.2.9999-r1.ebuild 10497 RMD160 fadc7d4eaa37ee70b1cda1be06eaba415e7c2740 SHA1 dd5c4155beae1dd822b8b4e0d5e08daa2f894795 SHA256 467c436f96f2503cba46b83ae69928e42b5a4ad92ab4c87de0d05b3ee20fb968
+EBUILD emacs-vcs-24.0.9999-r1.ebuild 10672 RMD160 f4128c209e546e6611857af90568e2679f50f228 SHA1 3558ce08fb80d4598b96e528b8b21e10e45cc485 SHA256 d8f805b0dca75516585498196543479e029b11a8a0bc3a50637b0e4b86ee4b4b
+MISC ChangeLog 2227 RMD160 68306e23ebfff6ce43b8a452b98fe4c7b6071599 SHA1 e81342f509ecc9fdba98438cabee29c250a910a7 SHA256 4185d279aef3191c11827b234a037f0a4977c213c4ac01ad53b0e87c61b5efb3
 MISC metadata.xml 1842 RMD160 57ca3c2d25e695ead4faa6cb01b4d7a03939b511 SHA1 1960513308596b38c3ad7cd248924c903611d39b SHA256 9ebd8972aea68e7b3fd62915725ca35d0678b218d922a467a2c978fe44312ddb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1S/eQACgkQOeoy/oIi7uzSqQCggv+Bt5swYMf21N9TcFnP84Ga
-9R0AoKVVUUUokq8Yp4jGSVKyHWyslFlO
-=I7zW
+iEYEARECAAYFAk1f2xsACgkQOeoy/oIi7ux3qQCgz6dmQEOr01AF49aE5Mx4cgvR
+r4kAoMbZNVtmGn5KcORPFRuKFKEJxD/y
+=Tmgf
 -----END PGP SIGNATURE-----
