@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,
+  emacs-vcs-24.0.9999-r1.ebuild:
+  Revert change of 09 Feb 2011. Add "nosmart" initial URI.
+
   09 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,
   emacs-vcs-24.0.9999-r1.ebuild:
   Add REQUIRED_USE for toolkits.
